# se-toolkit-lab-8

./: .env  .gitignore  FIX-TASK2-VM.sh  FIX-VM.sh  REPORT.md  TASK2_FIXES.md  VM-UPDATE.sh  add-debug-to-main.py  check-after-fix.py  check-after-rebuild.py  check-auth-config.py  check-auth-logic.py  check-auth-mode.py  check-clamp-def.py  check-compose-qwen.py  check-config-gen.py  check-llm-config.py  check-logs.py  check-models.py  check-nanobot-mcp.py  check-nanobot.py  check-no-oauth.py  check-oauth-creds.py  check-oauth.py  check-qwen-api.py  check-qwen-issue.py  check-request-url.py  check-status.py  check-task2.sh  check-task3.sh  check-task4.sh  check-validate.py  check-webchat-startup.py  check.sh  clean-restart.py  configure-qwen-auth.py  configure-qwen-oauth.py  connect-and-fix.ps1  copy-chat-to-container.py  copy-compose.py  (+123 more)
.qwen/: settings.json  settings.json.orig
backend/: pyproject.toml
caddy/: Caddyfile
mcp/mcp_obs/: pyproject.toml
mcp/mcp_obs/src/mcp_obs/: observability.py  server.py
nanobot/: Dockerfile  config.json  config.resolved.json  entrypoint.py  pyproject.toml
nanobot/workspace/: channels.json
nanobot/workspace/sessions/: cli_direct.jsonl  cli_final-labs.jsonl  cli_final-scores.jsonl  cli_task1a-labs.jsonl  cli_task1a-loop.jsonl  cli_task1a.jsonl  cli_task1b-labs.jsonl  cli_task1c.jsonl  cli_test.jsonl  cli_test1.jsonl  cli_test2.jsonl  cli_test3.jsonl  cli_test4.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: add-submodule-rebuild.py  build-and-deploy.py  final-fix.py  (+67 more)
(+4 files in other folders)
