[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP tools for observability (VictoriaLogs + VictoriaTraces)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "mcp>=1.26.0",
  "pydantic>=2.12.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
